--- a/chirps.qmd
+++ b/chirps.qmd
@@ -141,16 +141,16 @@ chirps %>%
 ```
 
 ```{r}
-anom <- chirps %>% 
+anom_r <- chirps %>% 
   group_by(x, y, year = year(time)) %>% 
   summarise(precipitation = sum(precipitation)) %>% 
   group_by(year) %>% 
   mutate(anomaly = precipitation - mean(precipitation)) %>% 
   group_by(x, y) %>% 
-  summarise(anomaly = mean(anomaly)) 
-anom_r <- chirps_r[[1]]
-values(anom_r) <- anom$anomaly
-pal <- colorNumeric(c("red", "#FFFFCC", "#0C2C84"), values(anom_r), na.color = "transparent")
+  summarise(anomaly = mean(anomaly)) %>% 
+  rast()
+crs(anom_r) <- crs(chirps_r)
+pal <- colorNumeric(c("#0C2C84", "#FFFFCC", "red"), values(anom_r), na.color = "transparent")
 leaflet() %>% 
   addTiles() %>%
   addRasterImage(anom_r, colors = pal, opacity = 0.6) %>% 
