--- a/references.bib
+++ b/references.bib
@@ -816,3 +816,32 @@
 	url = {http://dx.doi.org/10.1073/pnas.2309123120},
 	langid = {en}
 }
+
+@article{reygadas2023,
+	title = {Effects of deforestation and forest degradation on ecosystem service indicators across the Southwestern Amazon},
+	author = {Reygadas, Yunuen and Spera, Stephanie A. and Salisbury, David S.},
+	year = {2023},
+	month = {03},
+	date = {2023-03},
+	journal = {Ecological Indicators},
+	pages = {109996},
+	volume = {147},
+	doi = {10.1016/j.ecolind.2023.109996},
+	url = {http://dx.doi.org/10.1016/j.ecolind.2023.109996},
+	langid = {en}
+}
+
+@article{senay2013,
+	title = {Operational Evapotranspiration Mapping Using Remote Sensing and Weather Datasets: A New Parameterization for the SSEB Approach},
+	author = {Senay, Gabriel B. and Bohms, Stefanie and Singh, Ramesh K. and Gowda, Prasanna H. and Velpuri, Naga M. and Alemu, Henok and Verdin, James P.},
+	year = {2013},
+	month = {05},
+	date = {2013-05-13},
+	journal = {JAWRA Journal of the American Water Resources Association},
+	pages = {577--591},
+	volume = {49},
+	number = {3},
+	doi = {10.1111/jawr.12057},
+	url = {http://dx.doi.org/10.1111/jawr.12057},
+	langid = {en}
+}
