--- a/temperature.qmd
+++ b/temperature.qmd
@@ -13,7 +13,39 @@ knitr::opts_chunk$set(
   cache = T, cache.lazy = F)
 ```
 
-```{r}
+This chapter identify a general increase of January surface temperature in Guiavare that is significantly higher in deforested (+0.05°C \[0.04-0.06\]) an degraded (+0.03 \[0.02-0.04\]) lands compared to forest that remained undisturbed. However, due to the spatial structure of the deforestation arc, this result is not robust to spatial autocorrelation, with only non significant marked effect of deforested forest on warming surface temperature (+0.06°C \[-0.01-0.13\]). Further directions include (1) using other territories for statistical robustness, (2) using finer temporal indices such as extreme events, and (3) including climate warming in future scenarios (we observe +0.5°C in 15 years so stability is a problematic hypothesis here).
+
+## Method
+
+### Forest change
+
+We used the Tropical Moist Forest (TMF) product from the European Joint Research Centre (JRC) to asses forest surface evolution between 2001 and 2020 at 30-m and yearly resolutions. We focused on pixels categorized as undisturbed forest in 2001 and assessed if they were (1) undisturbed, (2) degraded or (3) deforested in 2020. We aggregated the resulting map to 0.01-degree.
+
+```{r tmfdata}
+#| include: false
+area <- st_read("data/guaviare/guaviare.shp", quiet=T)
+temp_r <- rast("results/data/modis_guaviare.nc")
+tmf_2001 <- rast("data/JRC_TMF_AnnualChange_v1_SAM_ID47_N10_W80/forobs/products/tmf_v1/AnnualChange/JRC_TMF_AnnualChange_v1_2001_SAM_ID47_N10_W80.tif") %>% crop(area)
+msk <- ifel(tmf_2001 != 1, NA, 1)
+tmf_2020 <- rast("data/JRC_TMF_AnnualChange_v1_SAM_ID47_N10_W80/forobs/products/tmf_v1/AnnualChange/JRC_TMF_AnnualChange_v1_2020_SAM_ID47_N10_W80.tif") %>% crop(area) %>% mask(msk) %>% as.factor() %>% resample(temp_r)
+tmf_2020 <- as.factor(ifel(tmf_2020 %in% 1:3, tmf_2020, NA))
+```
+
+```{r tmfplot}
+ggplot() +
+  tidyterra::geom_spatraster(data = tmf_2020) +
+  theme_bw() +
+  scale_fill_viridis_d("type") +
+  geom_sf(data = area, fill = NA, linewidth = 2) +
+  ggtitle("Guiavare forest change", 
+          "2020 versus 2001 from JRC TMF")
+```
+
+### Temperature
+
+Following @butt2023, we used land surface temperature (LST) data from MOD11A2 version 6 MODIS 8-d LST data at 0.01-degree resolution grid downloaded from (variable name: LST_Day_1km). We excluded data where the estimated emissivity error was greater than 0.02 and where the LST error was greater than 1 K. Extensive cloud cover can reduce the spatial and temporal availability of satellite data. For this reason, we focus our analysis on the dry season when there is less cloud cover. We thus worked with January the driest month in Guiavare. Dry season surface temperature changes were then calculated by comparing temperature of the driest month for two periods at the end (2015 to 2020) and start (2001 to 2006) of the study period. Using 5-y averages reduces the influences of climate variability. We computed both variations in mean temperature (tas), maximum temperature (tasmax), and minimum temperature (tasmin). As a final preprocessing step, we used forest change classification to keep only pixels undisturbed, degraded or deforested in 2020. Our final dataset comprised n=\~74 thousands pixels (1 km^2^ in extent) over the Guiavare region.
+
+```{r tempplot}
 area <- st_read("data/guaviare/guaviare.shp", quiet=T)
 temp_r <- rast("results/data/modis_guaviare.nc")
 ggplot() +
@@ -21,86 +53,70 @@ ggplot() +
   theme_bw() +
   scale_fill_viridis_c(expression(delta~T)) +
   geom_sf(data = area, fill = NA, linewidth = 2) +
-  ggtitle("Guiavare January Temperature anomaly", 
+  ggtitle("Guiavare January mean Temperature variation", 
           "2015-2020 versus 2001-2006 from MODIS MOD11A2 LST")
 ```
 
-```{r}
-area <- st_read("data/guaviare/guaviare.shp", quiet=T)
-forest_r <- rast("results/data/hansen_guaviare.nc")
-ggplot() +
-  tidyterra::geom_spatraster(data = forest_r) +
-  theme_bw() +
-  scale_fill_viridis_c("loss") +
-  geom_sf(data = area, fill = NA, linewidth = 2) +
-  ggtitle("Guiavare forest loss", 
-          "2022 versus 2000 from Hansen Global Forest Change")
-```
-
-```{r}
-temp_r <- rast("results/data/modis_guaviare.nc")
-forest_r <- rast("results/data/hansen_guaviare.nc")
-data.frame(values(temp_r$tas), values(forest_r)) %>% 
-  filter(loss < 0.5) %>% 
-  na.omit() %>% 
-  mutate(loss_class = cut(loss, breaks = seq(0, 1, by = 0.1))) %>% 
-  na.omit() %>% 
-  ggplot() +
-  geom_boxplot(aes(loss_class, tas)) +
-  geom_smooth(aes(loss_class, tas)) +
-  theme_bw() +
-  ggpubr::stat_anova_test(aes(loss_class, tas))
-```
-
-```{r}
-#| include: false
-tmf_2001 <- rast("data/JRC_TMF_AnnualChange_v1_SAM_ID47_N10_W80/forobs/products/tmf_v1/AnnualChange/JRC_TMF_AnnualChange_v1_2001_SAM_ID47_N10_W80.tif") %>% crop(area)
-msk <- ifel(tmf_2001 != 1, NA, 1)
-tmf_2020 <- rast("data/JRC_TMF_AnnualChange_v1_SAM_ID47_N10_W80/forobs/products/tmf_v1/AnnualChange/JRC_TMF_AnnualChange_v1_2020_SAM_ID47_N10_W80.tif") %>% crop(area) %>% mask(msk) %>% as.factor() %>% resample(temp_r)
-```
-
-```{r}
-ggplot() +
-  tidyterra::geom_spatraster(data = tmf_2020) +
-  theme_bw() +
-  scale_fill_viridis_d("type") +
-  geom_sf(data = area, fill = NA, linewidth = 2) +
-  ggtitle("Guiavare forest loss", 
-          "2020 versus 2001 from JRC TMF")
-```
-
-```{r}
+```{r tempdata}
 data <- as.data.frame(temp_r, xy = T) %>% 
   left_join(as.data.frame(tmf_2020, xy = T)) %>% 
   na.omit() %>% 
   mutate(type = recode(as.character(Dec2020),
-                       "1" = "Undisturbed tropical moist forest",
-                       "2" = "Degraded tropical moist forest",
-                       "3" = "Deforested land",
-                       "4" = "Tropical moist forest regrowth",
-                       "5" = "Permanent and seasonal water",
-                       "6" = "Other land cover")) %>% 
-  filter(Dec2020 != 5)
+                       "1" = "Undisturbed",
+                       "2" = "Degraded",
+                       "3" = "Deforested"))
 ```
 
-```{r}
+### Analysis
+
+For each variable we first realised an analysis of variance of temperature variation against forest change types associated to a Tukey honest significant difference test. To account for spatial autocorrelation, we further realised a linear regression with spatial random effect using a matern covariance and inferred with maximum likelihood on a subset of a thousand pixels. We tested for autocorrelation in residuals of both models Moran's coefficients for 20 distance classes.
+
+## Results
+
+### Analysis of variance (ANOVA)
+
+The ANOVA and Tukey HSD tests revealed significantly higher temperature in deforested (+0.05°C \[0.04-0.06\]) an degraded (+0.03 \[0.02-0.04\]) lands compared to forest that remained undisturbed. But the autocorrelogram revealed significant positive spatial autocorrelation up to 100-km.
+
+```{r anovaplot}
 data %>% 
   gather(variable, value, -x, -y, -Dec2020, -type) %>% 
+  mutate(varlong = recode(variable, "tas" = "mean", 
+                          "tasmax" = "maximum", "tasmin" = "minimum")) %>% 
   ggplot(aes(type, value, fill = type)) +
   geom_boxplot() +
   theme_bw() +
   ggpubr::stat_anova_test() +
   theme(axis.text.x = element_blank(), axis.ticks.x = element_blank(),
+        axis.title = element_blank(),
         legend.position = "bottom") +
-  facet_wrap(~ variable)
+  facet_wrap(~ varlong) +
+  scale_fill_discrete("") +
+  ggtitle("Guiavare January Temperature variation per forest change")
 ```
 
-```{r}
-TukeyHSD(aov(tas ~ type, data))$type %>% 
-  knitr::kable()
+```{r tukey}
+data %>% 
+  gather(variable, value, -x, -y, -Dec2020, -type) %>% 
+  mutate(varlong = recode(variable, "tas" = "mean", 
+                          "tasmax" = "maximum", "tasmin" = "minimum")) %>% 
+  group_by(varlong) %>% 
+  summarise(tukey = list(TukeyHSD(aov(value ~ type, data))$type %>% 
+                           as.data.frame() %>% 
+                           rownames_to_column("comp"))) %>% 
+  unnest(tukey) %>% 
+  ggplot(aes(comp, diff, col = `p adj` <= 0.05)) +
+  geom_point() +
+  geom_segment(aes(xend = comp, y = lwr, yend = upr)) +
+  theme_bw() +
+  coord_flip() +
+  geom_vline(xintercept = 0) +
+  theme(axis.title = element_blank()) +
+  facet_wrap(~ varlong) +
+  scale_color_discrete(guide = "none") +
+  ggtitle("Tukey honest significant difference tests")
 ```
 
-```{r}
+```{r anovacor}
 data$res_tas <- residuals(aov(tas ~ type, data))
 data2 <- sample_n(data, 1000)
 cor <- pgirmess::correlog(data.frame(data2$x, data2$y), data2$res_tas,
@@ -111,44 +127,42 @@ cor %>%
   geom_point(aes(alpha = p.value < 0.01)) + geom_line() +
   geom_hline(yintercept = 0) +
   theme_bw() +
-  xlab("Distance (km)") + ylab("Moran\'s I")
+  xlab("Distance (km)") + ylab("Moran\'s I") +
+  ggtitle("ANOVA residuals spatial autocorrelation")
 ```
 
-```{r}
-mem_vals <- adespatial::mem(spdep::nb2listw(spdep::tri2nb(as.matrix(data2[c("x", "y")])), style = "B"))
-data2$mem1 <- mem_vals$MEM1
-data2$mem2 <- mem_vals$MEM2
-data2$mem3 <- mem_vals$MEM3
-m <- lm(tas ~ type + y + mem1 + mem2 + mem3, data2) 
-```
+### Linear regression with spatial random effect (LRSRE)
 
-```{r}
-sjPlot::tab_model(m)
-```
+<!--# https://hughst.github.io/week-6/ -->
 
-```{r}
-aov(m) %>% summary()
-```
+The LRSRE revealed only non significant marked effect of deforested forest on warming surface temperature (+0.06°C \[-0.01-0.13\]).
 
-```{r}
-data2$res_mem <- residuals(m)
-cor <- pgirmess::correlog(data.frame(data2$x, data2$y), data2$res_mem,
-                   method = "Moran", nbclass = 20) %>% 
-    as.data.frame()
-cor %>% 
-  ggplot(aes(x = dist.class*100, y = coef)) + 
-  geom_point(aes(alpha = p.value < 0.01)) + geom_line() +
-  geom_hline(yintercept = 0) +
-  theme_bw() +
-  xlab("Distance (km)") + ylab("Moran\'s I")
-```
-
-```{r}
+```{r spammfit}
+#| include: false
+#| eval: false
 m <- spaMM::fitme(tas ~ type + Matern(1|y+x), data2)
-summary(m)
+tab <- summary(m)$beta_table
+save(m, tab, file = "save/temperature.Rdata")
 ```
 
-```{r}
+```{r spammplot}
+load("save/temperature.Rdata")
+as.data.frame(tab) %>% 
+  rename(estimate = "Estimate", se = "Cond. SE", t = "t-value") %>% 
+  mutate(lower = estimate - 1.96*se, upper = estimate + 1.96*se) %>% 
+  rownames_to_column("type") %>% 
+  mutate(type  = c("Deforested", "Degraded", "Undisturbed")) %>% 
+  ggplot(aes(type, estimate)) +
+  geom_point() +
+  geom_segment(aes(xend = type, y = lower, yend = upper)) +
+  theme_bw() +
+  coord_flip() +
+  geom_vline(xintercept = 0) +
+  theme(axis.title = element_blank()) +
+  ggtitle("LRSRE results")
+```
+
+```{r spammcor}
 cor <- pgirmess::correlog(coords = data2[,c("x", "y")],
                             z = residuals(m),
                             method="Moran", nbclass=20) %>% 
@@ -158,5 +172,6 @@ cor %>%
   geom_point(aes(alpha = p.value < 0.01)) + geom_line() +
   geom_hline(yintercept = 0) +
   theme_bw() +
-  xlab("Distance (km)") + ylab("Moran\'s I")
+  xlab("Distance (km)") + ylab("Moran\'s I") +
+  ggtitle("LRSRE residuals spatial autocorrelation")
 ```
