--- a/precipitation.qmd
+++ b/precipitation.qmd
@@ -1,3 +1,176 @@
 # Precipitation {.unnumbered}
 
+```{r setup}
+#| include: false
+rm(list = ls()) ; invisible(gc()) ; set.seed(42)
+library(tidyverse)
+library(terra)
+library(sf)
+library(leaflet)
+theme_set(bayesplot::theme_default())
+knitr::opts_chunk$set(
+  echo = F, message = F, warning = F, fig.height = 6, fig.width = 8,
+  cache = T, cache.lazy = F)
+```
 
+This chapter doest not identify any trend in monthly precipitation in Guiavare with forest cover changes. The analysis of variance suggested higher precipitation in undisturbed forest for September and October, but lower precipitation in undisturbed forest for the rest of the year. However, this results are not robust to spatial autocorrelation as the LRSRE revealed only null effects, suggesting that spatial autocorrelation explains all observed patterns. The differences might only be due to the globally higher precipitation of the north or the fact that open land may in fact temporarily increase precipitation by breaking the east to west water flux over Amazonia. Further directions include using other territories to try having a signal.
+
+## Method
+
+### Forest change
+
+We used the Tropical Moist Forest (TMF) product from the European Joint Research Centre (JRC) to asses forest surface evolution between 2001 and 2020 at 30-m and yearly resolutions. We focused on pixels categorized as undisturbed forest in 2001 and assessed if they were (1) undisturbed, (2) degraded or (3) deforested in 2020. We aggregated the resulting map to 0.01-degree.
+
+```{r tmfdata}
+#| include: false
+area <- st_read("data/guaviare/guaviare.shp", quiet=T)
+precip_r <- rast("results/data/chirps_guaviare.nc")
+tmf_2001 <- rast("data/JRC_TMF_AnnualChange_v1_SAM_ID47_N10_W80/forobs/products/tmf_v1/AnnualChange/JRC_TMF_AnnualChange_v1_2001_SAM_ID47_N10_W80.tif") %>% crop(area)
+msk <- ifel(tmf_2001 != 1, NA, 1)
+tmf_2020 <- rast("data/JRC_TMF_AnnualChange_v1_SAM_ID47_N10_W80/forobs/products/tmf_v1/AnnualChange/JRC_TMF_AnnualChange_v1_2020_SAM_ID47_N10_W80.tif") %>% crop(area) %>% mask(msk) %>% as.factor() %>% resample(precip_r)
+tmf_2020 <- as.factor(ifel(tmf_2020 %in% 1:3, tmf_2020, NA))
+```
+
+```{r tmfplot}
+ggplot() +
+  tidyterra::geom_spatraster(data = tmf_2020) +
+  theme_bw() +
+  scale_fill_viridis_d("type") +
+  geom_sf(data = area, fill = NA, linewidth = 2) +
+  ggtitle("Guiavare forest change", 
+          "2020 versus 2001 from JRC TMF")
+```
+
+### Precipitation
+
+We used CHIRPS data downscaled at 0.01-degree resolution with daily precipitation accumulation. Monthly precipitation precipitation changes were then calculated by (1) summing precipitation for each month of every year, (2) computing the monthly means over two periods at the end (2015 to 2020) and start (2001 to 2006) of the study period. Using 5-y averages reduces the influences of climate variability. As a final preprocessing step, we used forest change classification to keep only pixels undisturbed, degraded
+or deforested in 2020. Our final dataset comprised n=\~74 thousands pixels (1 km^2^ in extent) over the Guiavare region.
+
+```{r prplot}
+area <- st_read("data/guaviare/guaviare.shp", quiet=T)
+precip_r <- rast("results/data/chirps_guaviare.nc")
+ggplot() +
+  tidyterra::geom_spatraster(data = precip_r[[1]]) +
+  theme_bw() +
+  scale_fill_viridis_c(expression(delta~pr)) +
+  geom_sf(data = area, fill = NA, linewidth = 2) +
+  ggtitle("Guiavare January Precipitation variations", 
+          "2015-2020 versus 2001-2006 from CHIRPS")
+```
+
+```{r prdata}
+data <- as.data.frame(precip_r, xy = T) %>% 
+  gather(variable, precipitation, -x, -y) %>% 
+  separate(variable, c("X1", "X2", "month"), convert = T) %>% 
+  select(-X1, -X2) %>% 
+  left_join(as.data.frame(tmf_2020, xy = T)) %>% 
+  na.omit() %>% 
+  mutate(type = recode(as.character(Dec2020),
+                       "1" = "Undisturbed",
+                       "2" = "Degraded",
+                       "3" = "Deforested"))
+```
+
+### Analysis
+
+For each month, we first realised an analysis of variance of temperature variation against forest change types associated to a Tukey honest significant difference test. To account for spatial autocorrelation, we further realised a linear regression with spatial random effect using a matern covariance and inferred with maximum likelihood on a subset of a thousand pixels. We tested for autocorrelation in residuals of both models Moran's coefficients for 20 distance classes.
+
+## Results
+
+### Analysis of variance (ANOVA)
+
+The ANOVA and Tukey HSD tests suggested significantly higher precipitation in undisturbed forest for September and October, but lower precipitation in undisturbed forest for the rest of the year. However, this results are not robust as the autocorrelogram revealed significant positive spatial autocorrelation up to 160-km. The difference might only be due to the globally higher precipitation of the north or the fact that open land may in fact temporarily increase precipitation by breaking the east to west water flux over Amazonia (add ref).
+
+```{r anovaplot}
+data %>% 
+  ggplot(aes(type, precipitation, fill = type)) +
+  geom_boxplot() +
+  theme_bw() +
+  ggpubr::stat_anova_test() +
+  theme(axis.text.x = element_blank(), axis.ticks.x = element_blank(),
+        axis.title = element_blank(),
+        legend.position = "bottom") +
+  facet_wrap(~ month, scales = "free") +
+  scale_fill_discrete("") +
+  ggtitle("Guiavare monthly precipitation variation per forest change")
+```
+
+```{r tukey}
+data %>% 
+  split(data$month) %>% 
+  lapply(function(tab)
+    TukeyHSD(aov(precipitation ~ type, tab))$type %>% 
+                           as.data.frame() %>% 
+                           rownames_to_column("comp")) %>% 
+  bind_rows(.id = "month") %>% 
+  ggplot(aes(comp, diff, col = `p adj` <= 0.05)) +
+  geom_point() +
+  geom_segment(aes(xend = comp, y = lwr, yend = upr)) +
+  theme_bw() +
+  coord_flip() +
+  geom_vline(xintercept = 0) +
+  theme(axis.title = element_blank(), legend.position = "bottom") +
+  facet_wrap(~ month, scales = "free_x") +
+  ggtitle("Tukey honest significant difference tests")
+```
+
+```{r anovacor}
+data2 <- filter(data, month == 1)
+data2$res_tas <- residuals(aov(precipitation ~ type, data2))
+data2 <- sample_n(data2, 1000)
+cor <- pgirmess::correlog(data.frame(data2$x, data2$y), data2$res_tas,
+                   method = "Moran", nbclass = 20) %>% 
+    as.data.frame()
+cor %>% 
+  ggplot(aes(x = dist.class*100, y = coef)) + 
+  geom_point(aes(alpha = p.value < 0.01)) + geom_line() +
+  geom_hline(yintercept = 0) +
+  theme_bw() +
+  xlab("Distance (km)") + ylab("Moran\'s I") +
+  ggtitle("ANOVA residuals spatial autocorrelation")
+```
+
+### Linear regression with spatial random effect (LRSRE)
+
+<!--# https://hughst.github.io/week-6/ -->
+
+The LRSRE revealed only effect centred on 0, suggesting that spatial autocorrelation explains all observed patterns.
+
+```{r spammfit}
+#| include: false
+#| eval: false
+m <- spaMM::fitme(precipitation ~ type + Matern(1|y+x), data2)
+tab <- summary(m)$beta_table
+save(m, tab, file = "save/precipitation.Rdata")
+```
+
+```{r spammplot}
+load("save/precipitation.Rdata")
+as.data.frame(tab) %>% 
+  rename(estimate = "Estimate", se = "Cond. SE", t = "t-value") %>% 
+  mutate(lower = estimate - 1.96*se, upper = estimate + 1.96*se) %>% 
+  rownames_to_column("type") %>% 
+  mutate(type  = c("Deforested", "Degraded", "Undisturbed")) %>% 
+  ggplot(aes(type, estimate)) +
+  geom_point() +
+  geom_segment(aes(xend = type, y = lower, yend = upper)) +
+  theme_bw() +
+  coord_flip() +
+  geom_vline(xintercept = 0) +
+  theme(axis.title = element_blank()) +
+  ggtitle("LRSRE results")
+```
+
+```{r spammcor}
+cor <- pgirmess::correlog(coords = data2[,c("x", "y")],
+                            z = residuals(m),
+                            method="Moran", nbclass=20) %>% 
+    as.data.frame()
+cor %>% 
+  ggplot(aes(x = dist.class*100, y = coef)) + 
+  geom_point(aes(alpha = p.value < 0.01)) + geom_line() +
+  geom_hline(yintercept = 0) +
+  theme_bw() +
+  xlab("Distance (km)") + ylab("Moran\'s I") +
+  ggtitle("LRSRE residuals spatial autocorrelation")
+```
