--- a/temperature.qmd
+++ b/temperature.qmd
@@ -99,20 +99,20 @@ data %>%
   gather(variable, value, -x, -y, -Dec2020, -type) %>% 
   mutate(varlong = recode(variable, "tas" = "mean", 
                           "tasmax" = "maximum", "tasmin" = "minimum")) %>% 
-  group_by(varlong) %>% 
-  summarise(tukey = list(TukeyHSD(aov(value ~ type, data))$type %>% 
+  split(.$varlong) %>% 
+  lapply(function(tab)
+    TukeyHSD(aov(value ~ type, tab))$type %>% 
                            as.data.frame() %>% 
-                           rownames_to_column("comp"))) %>% 
-  unnest(tukey) %>% 
+                           rownames_to_column("comp")) %>% 
+  bind_rows(.id = "varlong") %>% 
   ggplot(aes(comp, diff, col = `p adj` <= 0.05)) +
   geom_point() +
   geom_segment(aes(xend = comp, y = lwr, yend = upr)) +
   theme_bw() +
   coord_flip() +
   geom_vline(xintercept = 0) +
-  theme(axis.title = element_blank()) +
-  facet_wrap(~ varlong) +
-  scale_color_discrete(guide = "none") +
+  theme(axis.title = element_blank(), legend.position = "bottom") +
+  facet_wrap(~ varlong, scales = "free_x") +
   ggtitle("Tukey honest significant difference tests")
 ```
 
