ideas 0.1.0.9007: etp & vpd (era5 should not be trusted)

--- a/references.bib
+++ b/references.bib
@@ -845,3 +845,31 @@
 	url = {http://dx.doi.org/10.1111/jawr.12057},
 	langid = {en}
 }
+
+@article{dasilva2024,
+	title = {Discrepancies between observation and ERA5 reanalysis in the Amazon deforestation context: a case study},
+	author = {da Silva, Queren Priscila and Moreira, Demerval Soares and de Freitas, {Helber Custódio} and Domingues, Leonardo Moreno},
+	year = {2024},
+	month = {01},
+	date = {2024-01},
+	journal = {Dynamics of Atmospheres and Oceans},
+	pages = {101442},
+	doi = {10.1016/j.dynatmoce.2024.101442},
+	url = {http://dx.doi.org/10.1016/j.dynatmoce.2024.101442},
+	langid = {en}
+}
+
+@article{xavier2022,
+	title = {New improved Brazilian daily weather gridded data (1961{\textendash}2020)},
+	author = {Xavier, Alexandre C. and Scanlon, Bridget R. and King, Carey W. and Alves, Aline I.},
+	year = {2022},
+	month = {06},
+	date = {2022-06},
+	journal = {International Journal of Climatology},
+	pages = {8390--8404},
+	volume = {42},
+	number = {16},
+	doi = {10.1002/joc.7731},
+	url = {http://dx.doi.org/10.1002/joc.7731},
+	langid = {en}
+}
