--- a/evapotranspiration.qmd
+++ b/evapotranspiration.qmd
@@ -1,4 +1,4 @@
-# Temperature {.unnumbered}
+# Evapotranspiration {.unnumbered}
 
 ```{r setup}
 #| include: false
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
   cache = T, cache.lazy = F)
 ```
 
-This chapter identify a general increase of January surface temperature in Guiavare that is significantly higher in deforested (+0.05°C \[0.04-0.06\]) an degraded (+0.03 \[0.02-0.04\]) lands compared to forest that remained undisturbed. However, due to the spatial structure of the deforestation arc, this result is not robust to spatial autocorrelation, with only non significant marked effect of deforested forest on warming surface temperature (+0.06°C \[-0.01-0.13\]). Further directions include (1) using other territories for statistical robustness, (2) using finer temporal indices such as extreme events, and (3) including climate warming in future scenarios (we observe +0.5°C in 15 years so stability is a problematic hypothesis here).
+This chapter identify an increase in Januaryevapotranspiration in Guiavare on deforested (+1mm/8day \[1-1\]) an degraded (+0.5mm/8day \[0.5-1\]) lands compared to forest that remained undisturbed. However, due to the spatial structure of the deforestation arc, this result is not robust to spatial autocorrelation, with only non significant marked effect of deforested forest on evapotranspiration increase (+2mm/8day \[-3-7\]). Further directions include (1) using other territories for statistical robustness, and (2) using finer temporal indices such as extreme events.
 
 ## Method
 
@@ -41,23 +41,23 @@ ggplot() +
           "2020 versus 2001 from JRC TMF")
 ```
 
-### Temperature
+### Evapotranspiration
 
-Following @butt2023, we used land surface temperature (LST) data from MOD11A2 version 6 MODIS 8-d LST data at 0.01-degree resolution grid. We excluded data where the estimated emissivity error was greater than 0.02 and where the LST error was greater than 1 K. Extensive cloud cover can reduce the spatial and temporal availability of satellite data. For this reason, we focus our analysis on the dry season when there is less cloud cover. We thus worked with January the driest month in Guiavare. Dry season surface temperature changes were then calculated by comparing temperature of the driest month for two periods at the end (2015 to 2020) and start (2001 to 2006) of the study period. Using 5-y averages reduces the influences of climate variability. We computed both variations in mean temperature (tas), maximum temperature (tasmax), and minimum temperature (tasmin). As a final preprocessing step, we used forest change classification to keep only pixels undisturbed, degraded or deforested in 2020. Our final dataset comprised n=\~74 thousands pixels (1 km^2^ in extent) over the Guiavare region.
+We used total evapotranspiration (ET) data from MOD16A2GF version 6.1 MODIS ET data downscaled at 0.01-degree resolution grid (originally 500-m). We kept only pixels with (1) only good quality (MODLAND), (2) on both Terra and Aqua sensors,(3) detectors fine for up to 50% of channels 1, 2, (4) without significant clouds, (5) and the main method used for best result possible (no saturation). Indeed, extensive cloud cover can reduce the spatial and temporal availability of satellite data. For this reason, we focus our analysis on the dry season when there is less cloud cover. We thus worked with January the driest month in Guiavare. Dry season evapotranspiration changes were then calculated by comparing evapotranspiration of the driest month for two periods at the end (2015 to 2020) and start (2001 to 2006) of the study period. Using 5-y averages reduces the influences of climate variability. We computed both variations in mean evapotranspiration (et), maximum evapotranspiration (etmax), and minimum evapotranspiration (etmin). As a final preprocessing step, we used forest change classification to keep only pixels undisturbed, degraded or deforested in 2020. Our final dataset comprised n=\~74 thousands pixels (1 km^2^ in extent) over the Guiavare region.
 
-```{r tempplot}
+```{r etplot}
 area <- st_read("data/guaviare/guaviare.shp", quiet=T)
-temp_r <- rast("results/data/modis_guaviare.nc")
+temp_r <- rast("results/data/modis_et_guaviare.nc")
 ggplot() +
-  tidyterra::geom_spatraster(data = temp_r[["tas"]]) +
+  tidyterra::geom_spatraster(data = temp_r[["et"]]) +
   theme_bw() +
-  scale_fill_viridis_c(expression(delta~T)) +
+  scale_fill_viridis_c(expression(delta~ET)) +
   geom_sf(data = area, fill = NA, linewidth = 2) +
-  ggtitle("Guiavare January mean Temperature variation", 
+  ggtitle("Guiavare January mean evaportanspiration variation", 
           "2015-2020 versus 2001-2006 from MODIS MOD11A2 LST")
 ```
 
-```{r tempdata}
+```{r etdata}
 data <- as.data.frame(temp_r, xy = T) %>% 
   left_join(as.data.frame(tmf_2020, xy = T)) %>% 
   na.omit() %>% 
@@ -75,13 +75,13 @@ For each variable we first realised an analysis of variance of temperature varia
 
 ### Analysis of variance (ANOVA)
 
-The ANOVA and Tukey HSD tests revealed significantly higher temperature in deforested (+0.05°C \[0.04-0.06\]) an degraded (+0.03 \[0.02-0.04\]) lands compared to forest that remained undisturbed. But the autocorrelogram revealed significant positive spatial autocorrelation up to 100-km.
+The ANOVA and Tukey HSD tests revealed significantly higher evapotranspiration in deforested (+0.05°C \[0.04-0.06\]) an degraded (+0.03 \[0.02-0.04\]) lands compared to forest that remained undisturbed. But the autocorrelogram revealed significant positive spatial autocorrelation up to 100-km.
 
 ```{r anovaplot}
 data %>% 
   gather(variable, value, -x, -y, -Dec2020, -type) %>% 
-  mutate(varlong = recode(variable, "tas" = "mean", 
-                          "tasmax" = "maximum", "tasmin" = "minimum")) %>% 
+  mutate(varlong = recode(variable, "et" = "mean", 
+                          "etmax" = "maximum", "etmin" = "minimum")) %>% 
   ggplot(aes(type, value, fill = type)) +
   geom_boxplot() +
   theme_bw() +
@@ -91,14 +91,14 @@ data %>%
         legend.position = "bottom") +
   facet_wrap(~ varlong) +
   scale_fill_discrete("") +
-  ggtitle("Guiavare January Temperature variation per forest change")
+  ggtitle("Guiavare January evapotranspiration variation per forest change")
 ```
 
 ```{r tukey}
 data %>% 
   gather(variable, value, -x, -y, -Dec2020, -type) %>% 
-  mutate(varlong = recode(variable, "tas" = "mean", 
-                          "tasmax" = "maximum", "tasmin" = "minimum")) %>% 
+  mutate(varlong = recode(variable, "et" = "mean", 
+                          "etmax" = "maximum", "etmin" = "minimum")) %>% 
   split(.$varlong) %>% 
   lapply(function(tab)
     TukeyHSD(aov(value ~ type, tab))$type %>% 
@@ -117,7 +117,7 @@ data %>%
 ```
 
 ```{r anovacor}
-data$res_tas <- residuals(aov(tas ~ type, data))
+data$res_tas <- residuals(aov(et ~ type, data))
 data2 <- sample_n(data, 1000)
 cor <- pgirmess::correlog(data.frame(data2$x, data2$y), data2$res_tas,
                    method = "Moran", nbclass = 20) %>% 
@@ -135,18 +135,18 @@ cor %>%
 
 <!--# https://hughst.github.io/week-6/ -->
 
-The LRSRE revealed only non significant marked effect of deforested forest on warming surface temperature (+0.06°C \[-0.01-0.13\]).
+The LRSRE revealed only non significant marked effect of deforested forest on evapotranspiration increase (+2mm/8day \[-3-7\]).
 
 ```{r spammfit}
 #| include: false
 #| eval: false
-m <- spaMM::fitme(tas ~ type + Matern(1|y+x), data2)
+m <- spaMM::fitme(et ~ type + Matern(1|y+x), data2)
 tab <- summary(m)$beta_table
-save(m, tab, file = "save/temperature.Rdata")
+save(m, tab, file = "save/evapotranspiration.Rdata")
 ```
 
 ```{r spammplot}
-load("save/temperature.Rdata")
+load("save/evapotranspiration.Rdata")
 as.data.frame(tab) %>% 
   rename(estimate = "Estimate", se = "Cond. SE", t = "t-value") %>% 
   mutate(lower = estimate - 1.96*se, upper = estimate + 1.96*se) %>% 
