--- a/literature.qmd
+++ b/literature.qmd
@@ -6,3 +6,20 @@
 -   @reygadas2023
 -   @senay2013
 -   @muñoz-sabater2021
+-   <https://www.pnas.org/doi/epdf/10.1073/pnas.2317456120>
+-   <https://www.nature.com/articles/nclimate3238>
+-   <https://www.nature.com/articles/nclimate3226>
+-   <https://www.nature.com/articles/nature10717>
+-   <https://www.pnas.org/doi/full/10.1073/pnas.0810156106>
+-   <https://rmets.onlinelibrary.wiley.com/doi/epdf/10.1002/joc.1475> (++)
+-   <https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2011GL047436>
+-   <https://agupubs.onlinelibrary.wiley.com/doi/10.1002/2014GB005080>
+-   <https://www.pnas.org/doi/full/10.1073/pnas.1302584110>
+-   <https://www.nature.com/articles/s41558-018-0177-y>
+-   <https://www.nature.com/articles/s41558-023-01776-4>
+-   <https://www.nature.com/articles/s41467-021-22840-7> (Fig. 2 +)
+-   <https://link.springer.com/article/10.1007/s40641-021-00178-y> (review)
+-   <https://agupubs.onlinelibrary.wiley.com/doi/10.1002/2015GL066063>
+-   <https://nph.onlinelibrary.wiley.com/doi/full/10.1111/j.1469-8137.2010.03358.x>
+-   <https://www.sciencedirect.com/science/article/pii/S0048969721072107> (big review of climate and lulcc for Brazil ++)
+-   <https://esajournals.onlinelibrary.wiley.com/doi/full/10.1890/04-1675>
