--- a/references.bib
+++ b/references.bib
@@ -873,3 +873,18 @@
 	url = {http://dx.doi.org/10.1002/joc.7731},
 	langid = {en}
 }
+
+@article{fu2013,
+	title = {Increased dry-season length over southern Amazonia in recent decades and its implication for future climate projection},
+	author = {Fu, Rong and Yin, Lei and Li, Wenhong and Arias, Paola A. and Dickinson, Robert E. and Huang, Lei and Chakraborty, Sudip and Fernandes, Katia and Liebmann, Brant and Fisher, Rosie and Myneni, Ranga B.},
+	year = {2013},
+	month = {10},
+	date = {2013-10-21},
+	journal = {Proceedings of the National Academy of Sciences},
+	pages = {18110--18115},
+	volume = {110},
+	number = {45},
+	doi = {10.1073/pnas.1302584110},
+	url = {http://dx.doi.org/10.1073/pnas.1302584110},
+	langid = {en}
+}
