--- a/temperature.qmd
+++ b/temperature.qmd
@@ -6,7 +6,8 @@ rm(list = ls()) ; invisible(gc()) ; set.seed(42)
 library(tidyverse)
 library(terra)
 library(sf)
-library(bayesplot)
+library(spatialreg)
+library(spdep)
 theme_set(bayesplot::theme_default())
 knitr::opts_chunk$set(
   echo = F, message = F, warning = F, fig.height = 6, fig.width = 8,
@@ -17,12 +18,13 @@ knitr::opts_chunk$set(
 #| include: false
 tas_ind <- rast("results/data/modis_indices_amazon.nc")
 tas <- rast("results/data/modis_anomalies_amazon.nc")
-deforest <- rast("results/data/tmf_deforested_2022_2000_amzaonia.tif")
-data <- lapply(deforest, as.data.frame, xy = T) %>% 
-  bind_rows() %>% 
+deforest <- rast("results/data/tmf_deforested_2022_2000_amzaon.tif") %>% 
+  resample(tas)
+data <- as.data.frame(deforest, xy = T) %>% 
   left_join(as.data.frame(tas, xy = TRUE)) %>% 
   na.omit() %>% 
-  mutate(intact = 1)
+  mutate(intact = 1) %>% 
+  filter(deforest > 1)
 ```
 
 Following @butt2023, we used land surface temperature (LST) data from MOD11A2 version 6 MODIS 8-d LST data at 0.01-degree resolution grid. We excluded data where the estimated emissivity error was greater than 0.02 and where the LST error was greater than 1 K. Extensive cloud cover can reduce the spatial and temporal availability of satellite data. For this reason, we focus our analysis on the dry season when there is less cloud cover. We thus worked with January the driest month in Guiavare. Dry season surface temperature changes were then calculated by comparing temperature of the driest month for two periods at the end (2018 to 2020) and start (2001 to 2003) of the study period. Using 3-y averages reduces the influences of climate variability. We computed variations in mean temperature (tas). Monthly or seasonal indices could be used at a later stage, but we must be wary of seasonal variations across space. Daily extrema could also be used.
@@ -48,6 +50,8 @@ tas_ind %>%
 ```{r ca2022}
 ggplot() +
   tidyterra::geom_spatraster(data = tas_ind[[22]]) +
+  geom_sf(data = st_read("data/capricho/capricho.shp", quiet = TRUE),
+          fill = NA, col = "red", linewidth = 1) +
   theme_bw() +
   scale_fill_viridis_c("°C", na.value = NA) +
   ggtitle("Temperature 2022")
@@ -56,6 +60,8 @@ ggplot() +
 ```{r caanom}
 ggplot() +
   tidyterra::geom_spatraster(data = tas) +
+  geom_sf(data = st_read("data/capricho/capricho.shp", quiet = TRUE),
+          fill = NA, col = "red", linewidth = 1) +
   theme_bw() +
   scale_fill_viridis_c("°C", na.value = NA) +
   ggtitle("Temperature anomalies", "2001:2003 vs 2000:2022")
@@ -66,13 +72,17 @@ ggplot() +
 Comparing deforestation surfaces to climate anomalies seems to indicate an increase in temperature with increasing deforestation surfaces. But caution should be taken because of possible spatial proximity between deforested pixels that could confound with the spatial structure of climate anomalies.
 
 ```{r cacomp}
+step <- 5
+top <- 100
 data %>% 
-  mutate(deforest = cut(deforest, breaks = seq(0, 1.3, by = 0.1),
-                              labels = seq(0, 1.2, by = 0.1)+0.05)) %>% 
+  mutate(deforest = cut(deforest, breaks = seq(0, top, by = step),
+                               labels = seq(0, (top-step), by = step)+step/2)) %>% 
+  mutate(deforest = as.numeric(as.character(deforest))) %>% 
+  na.omit() %>% 
   ggplot(aes(deforest, tas)) +
-  geom_boxplot() +
+  geom_boxplot(aes(group = as.character(deforest))) +
   theme_bw() +
-  geom_smooth(aes(x = as.numeric(deforest))) +
+  geom_smooth() +
   xlab("Deforestation surface (km2, 2000-2022)") +
   ylab("January anomalies of mean temperature at surface")
 ```
@@ -82,15 +92,13 @@ data %>%
 Classic linear regression without accounting for spatial autocorrelation found a general and significant increase in temperature (+0.19°C) and a significant increase in temperature (+0.52°C) with deforestation. However, inspecting models residuals revealed a significant spatial autocorrelation of model errors up to several hundred of kilometres questioning the robustness of the results.
 
 ```{r calm}
-reg <- lm(tas ~ 0 + intact + deforest, data)
+reg <- lm(tas ~ deforest, data)
 sjPlot::tab_model(reg)
 ```
 
 ```{r calmcor}
-data2 <- data
-data2$res <- residuals(reg) 
-data2 <- data2 %>% sample_n(1000)
-cor <- pgirmess::correlog(data.frame(data2$x, data2$y), data2$res,
+data$res <- residuals(reg)
+cor <- pgirmess::correlog(data.frame(data$x, data$y), data$res,
                    method = "Moran", nbclass = 30) %>% 
     as.data.frame()
 cor %>% 
@@ -106,36 +114,29 @@ cor %>%
 
 ## Spatial regressions
 
-To account for spatial autocorrelation, we took advantage of a method including spatial autocorrelation in model error (spNNGP, Gaussian univariate Bayesian spatial regression models using Nearest Neighbor Gaussian Processes, see note below). We found no significant effect of deforestation on temperature accounting for spatial autoccorelation.
+To account for spatial autocorrelation, we took advantage of a method including spatial autocorrelation in model error (CAR, conditional autoregression see note below). We found no significant effect of deforestation on temperature accounting for spatial autoccorelation.
 
-```{r srca}
-#| eval: false
-library(spNNGP)
-sr <- spNNGP(formula = tas ~ 0 + intact + deforest,
-                data = data,
-                coords = data[c("x", "y")], 
-                starting = list("phi" = 3 / 0.5, "sigma.sq" = 1, "tau.sq" = 1),
-                tuning = list("phi" = 0.2), 
-                priors = list("phi.Unif" = c(3 / 1, 3 / 0.1), 
-                              "sigma.sq.IG" = c(2, 1), "tau.sq.IG" = c(2, 1)), 
-                cov.model = "exponential",
-                n.samples = 2000, 
-                n.neighbors = 10, method = "latent", 
-                n.omp.threads = 20, n.report = 1000, fit.rep = TRUE,
-                sub.sample = list(start = 1000), return.neighbor.info = TRUE)
-save(sr, file = "save/tas.Rdata")
+```{r}
+nb <- dnearneigh(data[c("x", "y")], 0, 50, longlat = T)
+sr <- spautolm(tas ~ deforest, data, 
+               listw = nb2listw(nb, zero.policy = TRUE), family = "SAR")
+summary(sr)
 ```
 
-```{r srcaload}
-load("save/tas.Rdata")
-```
-
-```{r srcatrace}
-mcmc_trace(sr$p.beta.samples, n_warmup = 1000) 
-```
-
-```{r srcapost}
-mcmc_hist(sr$p.beta.samples[1001:2000,])
+```{r casrcor}
+data$res <- residuals(sr)
+cor <- pgirmess::correlog(data.frame(data$x, data$y), data$res,
+                   method = "Moran", nbclass = 30) %>% 
+    as.data.frame()
+cor %>% 
+  ggplot(aes(x = dist.class*100, y = coef)) + 
+  geom_point(aes(alpha = p.value < 0.01)) + geom_line() +
+  geom_hline(yintercept = 0) +
+  theme_bw() +
+  xlab("Distance (km)") + ylab("Moran\'s I") +
+  scale_x_log10() +
+  ylim(-1, 1) +
+  ggtitle("Residuals spatial auto-correlation")
 ```
 
 ## Spatial methods
